# icetray-tableio

./: .mailinglist  AddConverter.cmake  CMakeLists.txt  RELEASE_NOTES  standalone_hdf5.cmake
private/hdf-writer/: I3Converter.cxx  I3ConverterBundle.cxx  I3ConverterFactory.cxx  I3Table.cxx  I3TableRow.cxx  I3TableRowDescription.cxx  I3TableService.cxx  I3TableWriter.cxx  PythonConverter.cxx  PythonConverter.h
private/hdf-writer/converter/: I3DoubleConverter.cxx  I3IndexColumnsGenerator.cxx
private/hdf-writer/hdf/: I3HDFTable.cxx  I3HDFTableService.cxx
private/pybindings/: CMakeLists.txt  I3BroadcastTableService.cxx  I3Converter.cxx  I3ConverterBundle.cxx  I3Datatype.cxx  I3Table.cxx  I3TableRow.cxx  I3TableRowDescription.cxx  I3TableRow_detail.h  I3TableService.cxx  I3TableTranscriber.cxx  I3TableWriter.cxx  dataclasses_converters.cxx  module.cxx  type_helpers.cxx  type_helpers.h
private/tableio/: I3Converter.cxx  I3ConverterBundle.cxx  I3ConverterFactory.cxx  I3Datatype.cxx  I3Table.cxx  I3TableRow.cxx  I3TableRowDescription.cxx  I3TableService.cxx  I3TableTranscriber.cxx  I3TableWriter.cxx  I3TableWriter.h  PythonConverter.cxx  PythonConverter.h
private/tableio/broadcaster/: I3BroadcastTable.cxx  I3BroadcastTableService.cxx  I3BroadcastTableService.h
private/tableio/converter/: I3DirectionConverter.cxx  I3DirectionConverter.h  I3DoubleConverter.cxx  I3FilterResultMapConverter.cxx  I3IndexColumnsGenerator.cxx  I3IndexColumnsGenerator.h  I3MapConverter.cxx  I3MapConverter.h  I3MapStringConverter.cxx  I3MapStringConverter.h  I3MapStringVectorDoubleConverter.cxx  I3MapStringVectorDoubleConverter.h  I3ParticleConverter.cxx  I3PositionConverter.cxx  I3PositionConverter.h  I3TopLateralFitParamsConverter.cxx  I3TopLateralFitParamsConverter.h  I3TopRecoPlaneFitParamsConverter.cxx  I3TopRecoPlaneFitParamsConverter.h  I3TreeConverter.cxx  I3TriggerHierarchyConverter.cxx  I3TriggerHierarchyConverter.h  I3VectorConverter.cxx  I3VectorConverter.h  I3WaveformConverter.cxx  I3WaveformConverter.h  I3WaveformSeriesMapConverter.cxx  I3WaveformSeriesMapConverter.h  PODConverter.cxx  PODConverter.h  PythonConverter.cxx  PythonConverter.h  dataclasses_container_convert.cxx  dataclasses_container_convert.h  dataclasses_map_converters.cxx  dataclasses_map_converters.h  dataclasses_vector_converters.cxx  dataclasses_vector_converters.h  pod_converter_type_mapping.h
private/tableio/detail/: I3ConverterMill.cxx  I3ConverterMill.h
private/tableio/textwriter/: I3CSVTable.cxx
private/tableio/utils/: I3ConverterBundle.cxx  I3ConverterBundle.h  I3TableTranscriber.cxx  I3TableTranscriber.h
private/test/: I3DOMLaunchConverterTest.cxx  I3DatatypeTest.cxx  I3DoubleConverterTest.cxx  I3HDFRoundTripTest.cxx  I3TableRowDescriptionTest.cxx  I3TableRowTest.cxx  I3VectorI3ParticleConverterTest.cxx
public/hdf-writer/converter/: I3STLContainerConverter.h  pybindings.h
public/hdf-writer/hdf/: I3HDFTable.h  I3HDFTableService.h
public/hdf-writer/internals/: I3Converter.h  I3ConverterFactory.h  I3Table.h  I3TableRow.h  I3TableRowDescription.h  I3TableService.h  I3TableTranscriber.h  I3TableWriter.h
public/tableio/: I3Converter.h  I3ConverterFactory.h  I3MemoryChunk.h  I3Table.h  I3TableRow.h  I3TableRowDescription.h  I3TableService.h
public/tableio/broadcaster/: I3BroadcastTable.h  I3BroadcastTableService.h
public/tableio/converter/: I3DirectionConverter.h  I3EventHeaderConverter.h  I3FilterResultMapConverter.h  I3MapConverter.h  I3MapStringConverter.h  I3ParticleConverter.h  I3PositionConverter.h  I3STLContainerConverter.h  I3TreeConverter.h  I3TriggerHierarchyConverter.h  I3VectorConverter.h  I3WaveformConverter.h  PODConverter.h  container_converter_detail.h  pybindings.h
public/tableio/internals/: I3Converter.h  I3ConverterBundle.h  I3ConverterFactory.h  I3Datatype.h  I3Table.h  I3TableRow.h  I3TableRowDescription.h  I3TableService.h  I3TableTranscriber.h  I3TableWriter.h
public/tableio/textwriter/: I3CSVTable.h  I3CSVTableService.h
python/: I3TableWriterModule.py  __init__.py  enum.py  enum3.py  pytables_ext.py  registry.py  types.py
resources/docs/: container_converter.rst  converters.rst  cpp_converter.rst  existing_converters.rst  howto.rst  index.rst  make_a_writer_service.rst  python_converter.rst  transcriber.rst
resources/scripts/: I3FlasherInfoVectConverter.py  I3ParticleConverter.py  bookie.py  first_light.py  merge.py  module.py  test_pybindings.py  test_pywriter.py  transcribe.py
resources/test/: test_I3MCTree.py  test_converters.py  test_pybindings.py  test_recopulsemask.py  test_subevents.py
trunk/private/pybindings/: CMakeLists.txt  I3Converter.cxx  I3ConverterBundle.cxx  I3TableRow_detail.h  I3TableWriter.cxx  module.cxx  (+1 more)
trunk/python/: registry.py
(+27 files in other folders)
